--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Build with Hugo
         run: hugo --buildDrafts --baseURL "${{ steps.pages.outputs.base_url }}/"
       - name: Remove CNAME for preview
-        run: rm public/CNAME
+        run: rm -f public/CNAME
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
